--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mongodb": "^6.15.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
+    "multer": "^2.0.2"
   }
 }
